requests and responses

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "express": "^4.17.1"
   }
 }
