--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "cassandra-driver": "^4.6.2"
   }
 }
