--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cassandra-driver": "^4.6.2",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5",
-    "cassandra": "^3.11.10"
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
