--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -15,7 +15,8 @@
     "colors": "^1.4.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "mongoose": "^6.14.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
