--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -15,7 +15,9 @@
     "cassandra-driver": "^4.6.2",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5"
   },
