--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/
 dist/
-src/backend/.idea/
-src/backend/package-lock.json
-package-lock.json/
+.idea/
+package-lock.json
+.vscode
+.env
