--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +29,10 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "jest": "^27.0.1",
     "nodemon": "^2.0.7"
   }
 }
