--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env-standalone": "^7.8.3"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
@@ -22,6 +26,9 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
+    "jest": "*"
   }
 }
